src/metrics/snapshots/big_code_analysis__metrics__abc__tests__kotlin_object_singleton_abc.snap
---
source: src/metrics/abc.rs
expression: metric.abc
---
{
  "assignments": 2,
  "branches": 0,
  "conditions": 1,
  "magnitude": 2.23606797749979,
  "value": 0.0,
  "assignments_average": 0.6666666666666666,
  "branches_average": 0.0,
  "conditions_average": 0.3333333333333333,
  "assignments_min": 0,
  "assignments_max": 2,
  "branches_min": 0,
  "branches_max": 0,
  "conditions_min": 0,
  "conditions_max": 1
}
