src/metrics/snapshots/big_code_analysis__metrics__abc__tests__kotlin_var_declarations_count_assignment.snap
---
source: src/metrics/abc.rs
expression: metric.abc
---
{
  "assignments": 2,
  "branches": 0,
  "conditions": 0,
  "magnitude": 2.0,
  "value": 0.0,
  "assignments_average": 1.0,
  "branches_average": 0.0,
  "conditions_average": 0.0,
  "assignments_min": 0,
  "assignments_max": 2,
  "branches_min": 0,
  "branches_max": 0,
  "conditions_min": 0,
  "conditions_max": 0
}
