src/metrics/snapshots/big_code_analysis__metrics__abc__tests__kotlin_var_then_assignments_count.snap
---
source: src/metrics/abc.rs
expression: metric.abc
---
{
  "assignments": 3,
  "branches": 0,
  "conditions": 0,
  "magnitude": 3.0,
  "value": 0.0,
  "assignments_average": 1.5,
  "branches_average": 0.0,
  "conditions_average": 0.0,
  "assignments_min": 0,
  "assignments_max": 3,
  "branches_min": 0,
  "branches_max": 0,
  "conditions_min": 0,
  "conditions_max": 0
}
