src/metrics/snapshots/big_code_analysis__metrics__abc__tests__lua_calls_are_branches.snap
---
source: src/metrics/abc.rs
expression: metric.abc
---
{
  "assignments": 0,
  "branches": 5,
  "conditions": 0,
  "magnitude": 5.0,
  "assignments_average": 0.0,
  "branches_average": 2.5,
  "conditions_average": 0.0,
  "assignments_min": 0,
  "assignments_max": 0,
  "branches_min": 0,
  "branches_max": 5,
  "conditions_min": 0,
  "conditions_max": 0
}
