src/metrics/snapshots/big_code_analysis__metrics__abc__tests__lua_comparisons_and_boolean_ops_count_conditions.snap
---
source: src/metrics/abc.rs
expression: metric.abc
---
{
  "assignments": 8.0,
  "branches": 0.0,
  "conditions": 8.0,
  "magnitude": 11.313708498984761,
  "assignments_average": 4.0,
  "branches_average": 0.0,
  "conditions_average": 4.0,
  "assignments_min": 0.0,
  "assignments_max": 8.0,
  "branches_min": 0.0,
  "branches_max": 0.0,
  "conditions_min": 0.0,
  "conditions_max": 8.0
}
