src/metrics/snapshots/big_code_analysis__metrics__abc__tests__lua_comparisons_count_logical_ops_do_not.snap
---
source: src/metrics/abc.rs
expression: metric.abc
---
{
  "assignments": 8,
  "branches": 0,
  "conditions": 10,
  "magnitude": 12.806248474865697,
  "assignments_average": 4.0,
  "branches_average": 0.0,
  "conditions_average": 5.0,
  "assignments_min": 0,
  "assignments_max": 8,
  "branches_min": 0,
  "branches_max": 0,
  "conditions_min": 0,
  "conditions_max": 10
}
