src/metrics/snapshots/big_code_analysis__metrics__abc__tests__lua_complex_function_abc.snap
---
source: src/metrics/abc.rs
expression: metric.abc
---
{
  "assignments": 2,
  "branches": 2,
  "conditions": 2,
  "magnitude": 3.4641016151377544,
  "value": 0.0,
  "assignments_average": 1.0,
  "branches_average": 1.0,
  "conditions_average": 1.0,
  "assignments_min": 0,
  "assignments_max": 2,
  "branches_min": 0,
  "branches_max": 2,
  "conditions_min": 0,
  "conditions_max": 2
}
